--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "auth0-js": "^9.16.2",
     "bootstrap": "^5.0.0",
+    "cors": "^2.8.5",
+    "express-http-proxy": "^1.6.2",
+    "port": "^0.8.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -28,6 +32,7 @@
     "@angular-devkit/build-angular": "~12.1.1",
     "@angular/cli": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
+    "@types/auth0-js": "^9.14.5",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
